--- a/index.css
+++ b/index.css
@@ -1,5 +1,12 @@
 
+.header {
+    background-image: url("img/profile.jpg");
+}
+
+.profile {
+    width: 20%;
+}
 
 .technologies span img{
-    width: 50px;
+    width: 80px;
 }
